# social-gaming-platform

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  build  contriblame.sh  d
module/cereal/: CMakeLists.txt  cereal.cpp  cerealtokenizer.cpp
module/cereal/include/: cereal.h  cerealtokenizer.h
module/chat/: CMakeLists.txt
module/chat/include/: ChatException.hpp  Member.hpp  MemberPtr.hpp  Player.hpp  PlayerStats.hpp  Room.hpp  RoomId.hpp  Spectator.hpp  User.hpp  UserCommunication.hpp  UserNickname.hpp  UserNicknameGenerator.hpp
module/chat/include/internal/: BaseUser.hpp
module/chat/src/: BaseUser.cpp  ChatException.cpp  Member.cpp  Player.cpp  PlayerStats.cpp  Room.cpp  RoomId.cpp  Spectator.cpp  User.cpp  UserNickname.cpp  UserNicknameGenerator.cpp
module/command/: CMakeLists.txt
module/command/include/: Command.hpp  CommandArguments.hpp  CommandMap.hpp  CommandName.hpp  Executor.hpp  LambdaExecutor.hpp  command.h
module/command/src/: Command.cpp  CommandName.cpp  command.cpp
module/common/: CMakeLists.txt
module/common/include/: Result.hpp  Util.hpp
module/common/src/: _stub.cpp
module/common_collections/: CMakeLists.txt
module/common_collections/include/: Enum.hpp  WeakCollection.hpp  WeakVector.hpp
module/common_collections/src/: _stub.cpp
module/common_communication/: CMakeLists.txt
module/common_communication/include/: ChannelMultiQueue.hpp  ChannelSingleQueue.hpp  Signal.hpp
module/common_communication/src/: _stub.cpp
module/database/: PlayerDatabase.cpp  database.cpp  testSuite.cpp
module/database/include/: PlayerDatabase.h  database.h
module/database/src/: database.cpp
module/game/: CMakeLists.txt
module/game/include/: AbstractUser.hpp  Controller.hpp  DefaultController.hpp  Environment.hpp  GameException.hpp  Player.hpp  PlayerNickname.hpp  PlayerNicknameGenerator.hpp  PlayerStats.hpp  PlayerStatus.hpp  Room.hpp  RoomId.hpp  Spectator.hpp  User.hpp  UserCommunication.hpp  UserNickname.hpp  UserNicknameGenerator.hpp  UserStatus.hpp
module/game/include/interface/: PlayerNetworking.hpp  UserNetworking.hpp
module/game/src/: AbstractUser.cpp  Controller.cpp  DefaultController.cpp  GameException.cpp  Player.cpp  PlayerNickname.cpp  PlayerNicknameGenerator.cpp  PlayerStats.cpp  Room.cpp  RoomId.cpp  Spectator.cpp  Stub.cpp  User.cpp  UserNickname.cpp  UserNicknameGenerator.cpp
module/game_manager/: CMakeLists.txt
module/game_manager/include/: DSLInterpreter.h  GameInstance.h  GameManager.h  GameManager.hpp  GameState.h  GameUser.hpp  MapWrapper.h  RuleBook.h  Rules.h  State.h
module/game_manager/src/: DSLInterpreter.cpp  GameInstance.cpp  GameManager.cpp  GameUser.cpp
module/game_room/: CMakeLists.txt
module/game_room/include/: GameException.hpp  Player.hpp  PlayerNickname.hpp  PlayerNicknameGenerator.hpp  PlayerStats.hpp  PlayerStatus.hpp  Room.hpp  RoomId.hpp  Spectator.hpp
module/game_room/include/interface/: PlayerNetworking.hpp
module/game_room/src/: GameException.cpp  Player.cpp  PlayerNickname.cpp  PlayerNicknameGenerator.cpp  PlayerStats.cpp  Room.cpp  RoomId.cpp  Spectator.cpp
module/game_spec/: CMakeLists.txt
module/game_spec/include/: Expression.h  ExpressionPtr.h  GameSpecification.h  GameState.h  MapWrapper.h  Rule.h  Rules.h  Timer.h
module/game_spec/src/: Expression.cpp  ExpressionPtr.cpp  TestDriver.cpp  stub.cpp
module/interpreter_prototyping/: CMakeLists.txt
module/interpreter_prototyping/src/: command_line_system.cpp
module/jsonconfig/: CMakeLists.txt  jsonconfig.cpp
module/jsonconfig/include/: jsonSerializerImpl.h  jsonconfig.h
module/log/: CMakeLists.txt
module/log/include/: Adapter.hpp  Collector.hpp  Entry.hpp  Level.hpp  Log.hpp  LogStream.hpp  LogStreamFactory.hpp
module/log/src/: Entry.cpp  LogStream.cpp  LogStreamFactory.cpp  _stub.cpp  singleton.cpp
module/log_adapter_console/: CMakeLists.txt
module/log_adapter_console/include/: Adapter.hpp  ConsoleAdapter.hpp  Formatter.hpp  FormatterWithColor.hpp
module/log_adapter_console/src/: Adapter.cpp  ConsoleAdapter.cpp  Formatter.cpp  FormatterWithColor.cpp
module/networking/: CMakeLists.txt
module/networking/include/: NetworkException.hpp  Server.h  (+7 more)
module/networking_websocket/: CMakeLists.txt
module/networking_websocket/include/: BeastContext.hpp  BeastSocket.hpp  BeastSocketListener.hpp  Listener.hpp  Options.hpp  WebsocketSocket.hpp
module/networking_websocket/src/: BeastContext.cpp  BeastSocket.cpp  BeastSocketListener.cpp  Listener.cpp
module/protocol/: CMakeLists.txt
module/removeme_chatclient/: CMakeLists.txt
module/serializer/: CMakeLists.txt
module/serializer/include/: jsonSerializer.h
module/serializer/src/: jsonSerializer.cpp
module/server/: CMakeLists.txt
module/server/include/: ChannelToken.hpp  Client.hpp  Connection.hpp  ConnectionId.hpp  ConnectionSocket.hpp  Nickname.h  Packet.hpp  PacketException.hpp  Server.h  Server.hpp  ServerLoop.hpp  ServerManager.hpp  ServerUser.hpp  UnstructuredPacket.hpp
module/server/src/: ChannelToken.cpp  Client.cpp  Connection.cpp  Nickname.cpp  Packet.cpp  PacketException.cpp  Server.cpp  ServerLoop.cpp  ServerManager.cpp  ServerUser.cpp  UnstructuredPacket.cpp
module/server_config/: CMakeLists.txt
module/server_daemon/: CMakeLists.txt
module/server_daemon/include/: EXAMPLE_Simon.hpp  EXAMPLE_interpreter_game.hpp  GameInstance.h  GameInstanceController.hpp  RuleBook.h  State.h  commands.h  commands.hpp  config.hpp  dslInterpreter.h  logging.hpp
module/server_daemon/src/: EXAMPLE_Simon.cpp  EXAMPLE_interpreter_game.cpp  GameInstanceController.cpp  chatserver.cpp  commands.cpp  config.cpp  dslInterpreter.cpp  logging.cpp
scripts/cmake/: arepa_target_info.cmake  common.cmake  cxx.cmake  fn_export_headers.cmake  incl_target_format.cmake  lib_boost.cmake  lib_curses.cmake  lib_protobuf.cmake  lib_threads.cmake
templates/game/: rps.json  simplified.json
templates/server/: default.json
test/: CMakeLists.txt  Dummy.cpp  TestRules.cpp  testSerializer.cpp
test/lib/: CMakeLists.txt
(+24 files in other folders)
